...
                    android:id="@+id/verifyCodeView"
                    android:layout_width="224dp"
                    android:layout_height="86dp"
                    android:layout_marginBottom="10dp"
                    android:paddingLeft="@dimen/corner_size_10"
                    android:paddingRight="@dimen/corner_size_10"
                    app:layout_constraintBottom_toTopOf="@+id/button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:vfe_circle_color="@color/innerColor"
                    app:vfe_circle_radius="15"
                    app:vfe_line_style="LINEAR"
...
                    filterBox:cv_sb_searchIconSource="@drawable/ic_search_gray_24dp"
                    filterBox:cv_sb_searchIconVisibility="visible"

                    />

                <com.haytech.haytechstyles.username.UsernameFieldLayout
                    android:id="@+id/usernameFieldLayout"
                    style="@style/HaytechTextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
...
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.haytech.haytechstyles.username.UsernameFieldEditText
                        android:id="@+id/usernameFieldEditText"
                        style="@style/UsernameEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />
                </com.haytech.haytechstyles.username.UsernameFieldLayout>

                <com.haytech.haytechstyles.password.PasswordFieldLayout
                    android:id="@+id/passwordFieldLayout"
                    style="@style/HaytechTextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
...
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/usernameFieldLayout">

                    <com.haytech.haytechstyles.password.PasswordFieldEditText
                        android:id="@+id/passwordFieldEditText"
                        style="@style/PhoneEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.haytech.haytechstyles.password.PasswordFieldLayout>

...
