...
        app:layout_constraintEnd_toEndOf="@+id/constraint_parent_layout"
        app:layout_constraintStart_toStartOf="@+id/constraint_parent_layout"
        app:layout_constraintTop_toBottomOf="@+id/constraint_parent_layout">


        <TextView
            android:id="@+id/tv_read_more"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_summary"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
...
            android:background="@color/view_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <com.haytech.haytechstyles.selector.RadioButtonField
            android:id="@+id/myTextChecker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
...
